v3.3.18 (XXXX-XX-XX)
--------------------

* improved logging in case of replication errors

* recover short server id from agency after a restart of a cluster node

  this fixes problems with short server ids being set to 0 after a node restart,
  which then prevented cursor result load-forwarding between multiple coordinators
  to work properly

  this should fix arangojs#573

* increased default timeouts in replication

  this decreases the chances of followers not getting in sync with leaders because
  of replication operations timing out

* fixed internal issue #1983: the Web UI was showing a deletion confirmation
  multiple times.

* handle missing `_frontend` collections gracefully

  the `_frontend` system collection is not required for normal ArangoDB operations,
  so if it is missing for whatever reason, ensure that normal operations can go
  on.


v3.3.17 (2018-10-04)
--------------------

* upgraded arangosync version to 0.6.0

* added several advanced options for configuring and debugging LDAP connections.
  Please note that some of the following options are platform-specific and may not 
  work on all platforms or with all LDAP servers reliably:

  - `--ldap.serialized`: whether or not calls into the underlying LDAP library 
    should be serialized.
    This option can be used to work around thread-unsafe LDAP library functionality.
  - `--ldap.serialize-timeout`: sets the timeout value that is used when waiting to 
    enter the LDAP library call serialization lock. This is only meaningful when 
    `--ldap.serialized` has been set to `true`. 
  - `--ldap.retries`: number of tries to attempt a connection. Setting this to values 
    greater than one will make ArangoDB retry to contact the LDAP server in case no 
    connection can be made initially.
  - `--ldap.restart`: whether or not the LDAP library should implicitly restart 
    connections
  - `--ldap.referrals`: whether or not the LDAP library should implicitly chase 
    referrals